--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     - docker build -t drew2222222/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run drew2222222/react-test npm test -- --coverage
+    - docker run -e CI=true drew2222222/react-test npm test
 
 after_success:
     - docker build -t drew2222222/multi-client ./client
@@ -20,4 +20,3 @@ after_success:
     - docker push drew2222222/multi-nginx
     - docker push drew2222222/multi-server
     - docker push drew2222222/multi-worker
-
