adding deploy stage to travis.yml and Dockerrun.aws.json file created

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,15 @@ after_success:
     - docker push drew2222222/multi-nginx
     - docker push drew2222222/multi-server
     - docker push drew2222222/multi-worker
+
+deploy:
+    provider: elasticbeanstalk
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucker_name: elasticbeanstalk-us-east-2-696696467085
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
